--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
     "lucide-react": "^0.483.0",
-    "next": "15.2.1",
+    "next": "^16.1.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
